# grammers-friendly

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
lib/grammers-friendly/: Cargo.toml  README.md
lib/grammers-friendly/src/: data.rs  dispatcher.rs  filter.rs  filters.rs  handler.rs  lib.rs  middleware.rs  router.rs  traits.rs  utils.rs
lib/grammers-friendly/src/filters/: admin.rs  and.rs  command.rs  custom.rs  deleted.rs  edited.rs  not.rs  or.rs  private.rs  query.rs  regex.rs  reply.rs  text.rs
lib/grammers-macros/: Cargo.toml
lib/grammers-macros/src/: lib.rs
